Fix some serialization stuff